<resources>
    <string name="app_name" translatable="false">Info Cafe</string>
    <string name="app_version">version 1.0</string>
    <string name="app_copy_right" translatable="false">Copyright © 2018 Finding Coffee Team. All rights reserved</string>
    <string name="facebook_app_id" translatable="false">645410309182352</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb645410309182352</string>
    <string name="google_maps_api_key" translatable="false">AIzaSyAYjmyaEry9hJfmhNiZg98nM1z3EIx-dVE</string>

    <string name="back">Back</string>
    <string name="name_data_shop">Name </string>

    <string name="err_email_require">Email address is required</string>
    <string name="err_email_invalid">Invalid Email address</string>
    <string name="err_pass_require">Password is required</string>
    <string name="err_pass_too_short">Password is too short</string>

    <string name="txt_language_english" translatable="false">English</string>
    <string name="txt_language_thailand">Thai</string>
    <string name="txt_add_coffee_shop">Add Coffee Shop</string>
    <string name="txt_edit">Edit</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_page">Main page</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="no_acc">No account yet? Create one</string>
    <string name="acc_yet">Already Registered? Sign in Here</string>
    <string name="acc_done">Registered Successfully</string>
    <string name="txt_edit_success">Edit Successfully</string>
    <string name="title_activity_sign_up">sign up</string>
    <string name="title_activity_login">login</string>
    <string name="logo">logo</string>
    <string name="title_activity_main">main</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_register">Register</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_search_near">Nearby</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="name_shop">Name Coffee Shop</string>
    <string name="address">Address</string>
    <string name="txt_detail">Detail</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="txt_birth_date_prompt">Birth date : </string>
    <string name="txt_email_prompt">Email : </string>
    <string name="txt_name_prompt">Name : </string>
    <string name="txt_reg_prompt">Joined : </string>
    <string name="txt_uid_prompt" translatable="false">UID : </string>
    <string name="btn_message_preferences">Preferences</string>
    <string name="title_activity_preferences">Preferences</string>

    <string name="txt_example_long_text">When we see an event, we start to make assumptions. We use the context in which we find ourselves to make sense of what we see, but some researchers have suggested that context can also affect what we hear. It’s a psychological phenomenon that is no stranger to the courts.</string>
    <string name="txt_example_date_time">Mar 31, 2018 2:56:49 PM</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to follow
        based on your review
    </string>

    <string name="pref_title_profile">Profile</string>
    <string name="pref_title_edit_profile">Edit Profile</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_account">Account</string>
    <string name="pref_title_language">Language</string>
    <string name="pref_title_term">Term and Privacy</string>
    <string name="pref_title_about">About</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data and sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="txt_price">Price</string>
    <string name="txt_add">Add</string>
    <string name="txt_rang_0_100" translatable="false">0-100</string>
    <string name="txt_rang_101_200" translatable="false">101-150</string>
    <string name="txt_rang_over_200" translatable="false">151-200</string>
    <string name="txt_time_hour">Time hour</string>
    <string name="txt_location">Location</string>
    <string name="title_activity_data_shop" translatable="false">DataShopActivity</string>
    <string name="txt_review">Review</string>
    <string name="title_activity_comment" translatable="false">commentActivity</string>
    <string name="title_activity_review_display_activity" translatable="false">review_display_activity</string>
    <string name="txt_no_review_yet">No review yet!   Be the first review?</string>
    <string name="title_activity_share_image" translatable="false">ShareImageActivity</string>
    <string name="title_activity_full_image" translatable="false">FullImageActivity</string>
    <string name="title_activity_edit_data_shop" translatable="false">EditDataShopActivity</string>
    <string name="title_activity_search_filter" translatable="false">SearchFilterActivity</string>
    <string name="txt_no_comment">No comment</string>
    <string name="txt_close">close</string>
    <string name="txt_delete">delete</string>
    <string name="txt_post">Post</string>
    <string name="txt_comment">comment</string>
    <string name="txt_image">Image</string>
    <string name="txt_search_here">Search Here</string>
    <string name="txt_all">All</string>
    <string name="txt_add_by_me">Add by me</string>
    <string name="txt_check_in">check-in</string>
    <string name="txt_shared_image">Share Image</string>
    <string name="txt_please_waite">Please wait ...</string>
    <string name="txt_my_coffee">coffee list I added.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="txt_update">Update</string>
    <string name="txt_open_time">Open Times</string>
</resources>
