<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_home"
        android:title="@string/menu_home"
        android:state_enabled="true"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_search"
        android:title="@string/menu_search"
        android:state_enabled="true"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_search_near"
        android:title="@string/menu_search_near"
        android:state_enabled="true"
        android:icon="@drawable/ic_search_near"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_favorite"
        android:title="@string/menu_favorite"
        android:state_enabled="true"
        android:icon="@drawable/ic_favorite"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_profile"
        android:title="@string/menu_profile"
        android:state_enabled="true"
        android:icon="@drawable/ic_profile"
        app:showAsAction="ifRoom"/>
</menu>