<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_white"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:padding="@dimen/range_12">

    <ImageView
        android:id="@+id/item_comment_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/range_18"
        android:src="@drawable/ic_profile"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/item_comment_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/item_comment_image"
        android:paddingBottom="5dp"
        android:text="@string/app_name"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/item_comment_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_comment_name"
        android:layout_toEndOf="@+id/item_comment_image"
        android:text="@string/txt_example_long_text"
        android:textColor="#8b8b8b" />

    <TextView
        android:id="@+id/item_comment_datetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_comment_description"
        android:layout_marginTop="12sp"
        android:layout_marginBottom="12sp"
        android:layout_toEndOf="@+id/item_comment_image"
        android:text="@string/txt_example_date_time"
        android:textColor="#8b8b8b" />


</RelativeLayout>