<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cmu.nuts.coffee9.main.fragment.AddShopFragment"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarAddShop"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorWhite"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_below="@+id/toolbarAddShop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="vertical"
            android:padding="15dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="@dimen/range_5"
                android:visibility="gone">

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_shop"
                android:inputType="textLongMessage"
                android:visibility="gone"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="@dimen/range_5">

                <EditText
                    android:id="@+id/edit_data_name_shop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_shop"
                    android:inputType="textLongMessage" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="@dimen/range_5">

                <EditText
                    android:id="@+id/edit_data_address_shop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:minLines="2"
                    android:inputType="textLongMessage" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="@dimen/range_5">

                <EditText
                    android:id="@+id/edit_data_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_detail"
                    android:minLines="2"
                    android:inputType="textLongMessage" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="@dimen/range_5">

                <EditText
                    android:id="@+id/edit_data_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_time_hour"
                    android:inputType="textLongMessage" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="@dimen/range_5">

                <TextView
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"
                    android:hint="@string/txt_price"
                    android:paddingStart="6sp"
                    tools:ignore="RtlSymmetry" />

                <RadioGroup
                    android:id="@+id/edit_data_rdo_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rdo_min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:paddingEnd="12dp"
                        android:text="@string/txt_rang_0_100" />

                    <RadioButton
                        android:id="@+id/rdo_mid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:paddingEnd="15dp"
                        android:text="@string/txt_rang_101_200" />

                    <RadioButton
                        android:id="@+id/rdo_max"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/txt_rang_over_200" />

                </RadioGroup>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/edit_data_btn_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30sp"
                android:layout_marginBottom="200dp"
                android:background="@color/colorAccent"
                android:padding="5dp"
                android:layout_margin="20dp"
                android:text="@string/done_label"
                android:theme="@style/PrimaryFlatButton" />
        </android.support.v7.widget.LinearLayoutCompat>
    </RelativeLayout>
</ScrollView>
